<resources>
    <string name="app_name">LEGO BattleBots</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="battle">Battle!</string>
    <string name="register">Register</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="scan">Scan Again</string>
    <string name="connect">Connect!</string>
    <string name="emailHint">user@example.com</string>
    <string name="passwordHint">*********</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attack">Attack</string>
    <string name="attack_1">Attack 1</string>
    <string name="attack_2">Attack 2</string>
    <!-- Layout Strings -->
    <string name="select">Select!</string>
    <string name="connecting_text">Connecting to BattleBot…</string>
    <string name="logged_in_user">Logged in as: %1$s</string>
    <string name="bot_connected">Connected to Bot: %1$s</string>
    <string name="bot_selected">Bot Selected: %1$s</string>
    <string name="bot_id">Battle Bot Id: %1$d</string>
    <string name="weapon_selected">Weapon Selected: %1$s</string>
</resources>
