<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="819dp"
            android:layout_height="512dp"
            android:src="@mipmap/gray_lego_bg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="735dp"
            android:layout_height="417dp"
            android:layout_marginStart="16dp">

            <Button
                android:id="@+id/logUserBtn"
                android:layout_width="153dp"
                android:layout_height="65dp"
                android:background="@mipmap/black_brick2"
                android:fontFamily="@font/aldrich"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.746"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.747" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="217dp"
                android:layout_height="33dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.579"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.248" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:editable="false"
                android:fontFamily="@font/aldrich"
                android:text="@string/email"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.305"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:editable="false"
                android:fontFamily="@font/aldrich"
                android:text="@string/password"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.242"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="154dp"
                android:layout_height="66dp"
                android:background="@mipmap/black_brick2"
                android:fontFamily="@font/aldrich"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.75" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="217dp"
                android:layout_height="34dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.579"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.437" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>